Posterior keyset is used for block's author (to account for epoch change)

--- a/text/header.tex
+++ b/text/header.tex
@@ -39,7 +39,7 @@ The parent state root $\mathbf{H}_r$ is the root of a Merkle trie composed by th
 
 We assume the state-Merklization function $\mathcal{M}_\sigma$ is capable of transforming our state $\sigma$ into a 32-octet commitment. See appendix \ref{sec:statemerklization} for a full definition of these two functions.
 
-All blocks have an associated public key to identify the author of the block. We identify this as an index into the prior current validator set $\kappa$. We denote the Bandersnatch key of the author as $\mathbf{H}_a$ though note that this is merely an equivalence, and is not serialized as part of the header.
+All blocks have an associated public key to identify the author of the block. We identify this as an index into the posterior current validator set $\kappa'$. We denote the Bandersnatch key of the author as $\mathbf{H}_a$ though note that this is merely an equivalence, and is not serialized as part of the header.
 \begin{equation}
   \mathbf{H}_i \in \N_\mathsf{V} \,,\quad \mathbf{H}_a \equiv \kappa'[\mathbf{H}_i]
 \end{equation}
