--- a/preamble.tex
+++ b/preamble.tex
@@ -149,7 +149,10 @@
 \newcommand*{\xtassurances}{\mathbf{E}_A}
 \newcommand*{\xtpreimages}{\mathbf{E}_P}
 
-\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.3.2+changes \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.3.2+changes \today}}
+\newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!}
+\newcommand*{\jamdraftversionsuffix}{\input{VERSION_SUFFIX}\!\!\!}
+
+\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft \jamdraftversion\jamdraftversionsuffix\ \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft \jamdraftversion\jamdraftversionsuffix\ \today}}
 \author{
   Dr. Gavin Wood\\
   Founder, Polkadot \& Ethereum\\%, Parity, Web3 Foundation, Fellowship\\
