--- a/graypaper.tex
+++ b/graypaper.tex
@@ -1,17 +1,9 @@
 \documentclass[9pt,oneside]{amsart}
 \input{preamble.tex}
+
 \pagecolor{verydarkgray}
 \color{white}
-
-%\pagecolor{white}
-%\AddToShipoutPicture{
-%  \checkoddpage
-%  \ifoddpage
-%    \put(-1 mm,0){\includegraphics[width=\paperwidth,height=\paperheight]{assets/grayr.png}}
-%  \else
-%    \put(-1 mm,0){\includegraphics[width=\paperwidth,height=\paperheight]{assets/grayl.png}}
-%\fi
-%}
+\makegpbackground
 
 \begin{document}
 
