--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -10,7 +10,7 @@
     \item[$\N_B$] The set of balance values. Equivalent to $\N_{2^{64}}$. See equation \ref{eq:balance}.
     \item[$\N_G$] The set of unsigned gas values. Equivalent to $\mathbb{N}_{2^{64}}$. See equation \ref{eq:gasregentry}.
     \item[$\N_L$] The set of blob length values. Equivalent to $\N_{2^{32}}$. See section \ref{sec:numbers}.
-    \item[$\N_S$] The index of a service. Equivalent to $\N_{2^{32}}$. See section \ref{eq:serviceaccounts}.
+    \item[$\N_S$] The set from which service indices are drawn. Equivalent to $\N_{2^{32}}$. See section \ref{eq:serviceaccounts}.
     \item[$\N_T$] The set of timeslot values. Equivalent to $\N_{2^{32}}$. See equation \ref{eq:time}.
   \end{description}
   \item[$\mathbb{Q}$] The set of rational numbers. Unused.
