--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -9,7 +9,7 @@ For each recent block, we retain its header hash, its state root, its accumulati
 
 During the accumulation stage, a value with the partial transition of this state is provided which contains the update for the newly-known roots of the parent block:
 \begin{equation}
-  \beta^\dagger \equiv \beta\quad\exc\quad\beta^\dagger[0]_s = \mathbf{H}_r
+  \beta^\dagger \equiv \beta\quad\exc\quad\beta^\dagger[|\beta| - 1]_s = \mathbf{H}_r
 \end{equation}
 
 We define an item $n$ comprising the new block's header hash, its accumulation-result Merkle tree root and the set of work-reports made into it (for which we use the guarantees extrinsic, $\xtguarantees$). Note that the accumulation-result tree root $r$ is derived from $\mathbf{C}$ (defined in section \ref{sec:accumulation}) using the basic binary Merklization function $\mathcal{M}_B$ (defined in appendix \ref{sec:merklization}) and appending it using the \textsc{mmr} append function $\mathcal{A}$ (defined in appendix \ref{sec:mmr}) to form a Merkle mountain range.
