Fix stats to use header author index (not author key)

--- a/text/ratings.tex
+++ b/text/ratings.tex
@@ -38,17 +38,17 @@ The objective statistics are updated in line with their description, formally:
         (\sq{\tuple{0, \dots, [0, \dots]}, \dots}, \pi_0) &\otherwise
     \end{cases}\\
     \forall v \in \N_\mathsf{V} :&\; \left\{\begin{aligned}
-        \pi'_0[v]_b &\equiv \mathbf{a}[v]_b + (v = \mathbf{H}_a)\\
+        \pi'_0[v]_b &\equiv \mathbf{a}[v]_b + (v = \mathbf{H}_i)\\
         \pi'_0[v]_t &\equiv \mathbf{a}[v]_t + \begin{cases}
-            |\xttickets| &\when v = \mathbf{H}_a \\
+            |\xttickets| &\when v = \mathbf{H}_i \\
             0 &\otherwise
         \end{cases}\\
         \pi'_0[v]_p &\equiv \mathbf{a}[v]_p + \begin{cases}
-            |\xtpreimages| &\when v = \mathbf{H}_a \\
+            |\xtpreimages| &\when v = \mathbf{H}_i \\
             0 &\otherwise
         \end{cases}\\
         \pi'_0[v]_d &\equiv \mathbf{a}[v]_d + \begin{cases}
-            \sum_{d \in \xtpreimages}|d| &\when v = \mathbf{H}_a \\
+            \sum_{d \in \xtpreimages}|d| &\when v = \mathbf{H}_i \\
             0 &\otherwise
         \end{cases}\\
         \pi'_0[v]_g &\equiv \mathbf{a}[v]_g + (\kappa'_v \in \mathbf{R})\\
