Safrole: Fix k_b to k_e

--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -99,7 +99,7 @@ With a new epoch under regular conditions, validator keys get rotated and the ep
   \end{cases} \\
   \nonumber \where z &= \mathcal{O}([k_b \mid k \orderedin \gamma'_\mathbf{k}]) \\
   \label{eq:blacklistfilter} \Phi(\mathbf{k}) &\equiv \sq{
-    \begin{rcases}[0, 0, \dots] &\when k_b \in \offenders' \\ k &\otherwise \end{rcases}
+    \begin{rcases}[0, 0, \dots] &\when k_e \in \offenders' \\ k &\otherwise \end{rcases}
     \,\middle\mid\, k \orderedin \mathbf{k}
   }
 \end{align}
