--- a/text/ratings.tex
+++ b/text/ratings.tex
@@ -32,9 +32,9 @@ The six statistics we track are:
 
 The objective statistics are updated in line with their description, formally:
 \begin{align}
-    \using m =\; &\ffrac{\tau}{\mathsf{E}} \ ,\quad m' = \ffrac{\tau'}{\mathsf{E}}\\
+    \using e =\; &\ffrac{\tau}{\mathsf{E}} \ ,\quad e' = \ffrac{\tau'}{\mathsf{E}}\\
     (\mathbf{a}, \pi'_1) \equiv\;&\begin{cases}
-        (\pi_0, \pi_1) &\when m' = m \\
+        (\pi_0, \pi_1) &\when e' = e \\
         (\sq{\tuple{0, \dots, [0, \dots]}, \dots}, \pi_0) &\otherwise
     \end{cases}\\
     \forall v \in \N_\mathsf{V} :&\; \left\{\begin{aligned}
